Cleaned up Modal dialogs. Made them consistent Cleaned up the reset password page Fixed clickable links in activity descriptions. Added a message to the Hidden Activities list when there are no hidden activities. Fixed a bug introduced in the last commit that broke the profile page. Fixed a bug on the Hidden Activities list that prevented the modal dialog from dismissing when trying to refresh the list Darkened the page mask behind some modal dialogs.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -573,6 +573,19 @@ body.pass p {
   margin:0;
 }
 
+#partialUserResetForm label {
+  font-weight:bold;
+}
+
+body.pass p, body.pass #partialUserResetForm {
+  max-width: 500px;
+  margin:1em auto;
+}
+
+#partialUserResetForm {
+  margin-bottom:4em;
+}
+
 /* USER PROFILE PAGE
 -----------------------------------------------------------------------------*/
 .user-profile-form {
@@ -685,7 +698,7 @@ ol.rover-filtered-activity-list li.rover-activity-list-item {
 }
 
 .rover-activity a {
-    color: #454b4d;
+    color: #4db8db;
     text-decoration: none;
 }
 
@@ -1466,6 +1479,10 @@ a.unignore-btn {
     top:.25em;
     margin-right:.375em;
     fill:#454b4d;
+  }
+
+  .no-touch body.pass form {
+    max-width: 250px;
   }
 
   .no-touch body.profile .item.nav-profile {
